fixes search label alignment

--- a/_sass/steve/_layout.scss
+++ b/_sass/steve/_layout.scss
@@ -320,6 +320,11 @@ body {
 
 // Search Form
 
+label[for="search_terms"] {
+  display: inline-block;
+  margin-bottom: calc(var(--gap) / 2);
+}
+
 .search-controls {
   display: flex;
   flex-flow: row nowrap;
@@ -336,6 +341,7 @@ body {
 
 .colophon {
   margin-top: calc(var(--gap) * 2);
+  font-size: 0.875rem;
 
   h5 {
     a {
@@ -345,7 +351,6 @@ body {
 
   .site-info {
     text-align: center;
-    font-size: 0.875rem;
   }
 
   .external-links {
